# grammarlin

./: .gitignore  README.md
app/: README.md
app/app-api/: Cargo.toml  Config.toml
app/app-api/resources/: 80-most-common-phrases.txt  email-samples.txt
app/app-api/src/: database.rs  main.rs  server.rs
app/app-api/src/models/: error.rs  mod.rs  suggestions.rs
app/react-client/: package-lock.json  package.json
app/react-client/public/: index.html
app/react-client/src/: App.jsx  index.js
app/react-client/src/axios/: axios.js
parse/: Cargo.toml  SampleText.txt
parse/src/: lib.rs
trie/: Cargo.toml  README.md
trie/src/: lib.rs
trie/tests/: api_tests.rs
