[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
trie = { path = "../../trie" }
parse = { path = "../../parse" }
log = "0.4"
serde_json = "1.0.108"
env_logger = "0.10.1"
toml = "0.5"
derive_more = "0.99.17"
